admission-webhook/manifests/echo-server.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: echo-server
    deepfence.io/admission-webhook: enabled
  name: echo-server
spec:
  replicas: 3
  selector:
    matchLabels:
      app: echo-server
  template:
    metadata:
      labels:
        app: echo-server
        # deepfence.io/admission-webhook: enabled
    spec:
      containers:
        - image: inanimate/echo-server
          name: echo-server
          ports:
            - containerPort: 8080
          resources:
            requests:
              cpu: 10m
              memory: 20Mi
            limits:
              cpu: 30m
              memory: 40Mi
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - echo-server
              topologyKey: topology.kubernetes.io/zone
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: echo-server
  name: echo-server
spec:
  ports:
    - port: 8080
      protocol: TCP
      targetPort: 8080
  type: ClusterIP
  selector:
    app: echo-server
