admission-webhook/manifests/webhook.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: admission-webhook
  name: admission-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app: admission-webhook
  template:
    metadata:
      labels:
        app: admission-webhook
    spec:
      containers:
        - name: webhook
          image: deepfenceio/admission-webhook:latest
          imagePullPolicy: Never
          # command:
          #   - /bin/sh
          #   - -c 
          #   - admission-webhook
          #   - --console-url
          #   - ${MGMT_CONSOLE_URL}
          #   - --api-key
          #   - ${DEEPFENCE_KEY}
          ports:
            - containerPort: 8443
          volumeMounts:
            - name: tls
              mountPath: "/certs"
              readOnly: true
          resources:
            limits:
              memory: 256Mi
              cpu: 100m
      volumes:
        - name: tls
          secret:
            secretName: admission-webhook-tls
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: admission-webhook
  name: admission-webhook
spec:
  type: ClusterIP
  ports:
    - port: 443
      protocol: TCP
      targetPort: 8443
  selector:
    app: admission-webhook
