admission-webhook/manifests/validating-webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: "admission-webhook.deepfence.io"
webhooks:
  - name: "admission-webhook.deepfence.io"
    failurePolicy: Ignore
    matchPolicy: Equivalent
    namespaceSelector:
      matchLabels:
        deepfence.io/admission-webhook: enabled
    rules:
      - apiGroups: ["*"]
        apiVersions: ["v1"]
        operations: ["CREATE","UPDATE"]
        resources: ["pods", "deployments","statefulset","daemonset"]
        scope: "*"
    clientConfig:
      service:
        namespace: deepfence
        name: admission-webhook
        path: /validate
        port: 443
      caBundle: |
        LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURNekNDQWh1Z0F3SUJBZ0lVQ1dqUWhzTUxn
[...]
        UEtRPT0KLS0tLS1FTkQgQ0VSVElGSUNBVEUtLS0tLQo=
    admissionReviewVersions: ["v1"]
    sideEffects: None
    timeoutSeconds: 5
